--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,14 @@
 db/
 incremental_db/
 output_files/
+*/simulation/*
+*/greybox_tmp/
 *.qpf~
 *.qsf~
+*.qpf
+*.qsf
+*.qdf
+*.qip
 *.sof
 *.pof
 *.rpt
